--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ node_modules/
 
 # Logs
 logs/
-*.log
+
 
 # Build / output folders
 dist/
@@ -14,3 +14,5 @@ build/
 
 # VS Code settings
 .vscode/
+
+/tests
