--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-"test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
     "start": "nodemon app.js"
   },
   "keywords": [],
@@ -16,11 +16,13 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
+    "validator": "^13.15.15",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^30.2.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
