--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
+    "mongoose-validator": "^2.1.0",
     "validator": "^13.15.15",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
